test_report.txt

> react-typescript-starter@0.0.0 test
> react-scripts test --coverage

FAIL src/index.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/final-project-start/final-project-start/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

       5 | import { useCallback, useState } from "react";
       6 | import type { XYCoord } from "react-dnd";
    >  7 | import { useDrop } from "react-dnd";
         | ^
       8 | import { Place } from "./Place";
       9 |
      10 | import { Dustbin } from "./Basket";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/Container.tsx:7:1)
      at Object.<anonymous> (src/DraggingLayer.tsx:7:1)
      at Object.<anonymous> (src/index.tsx:3:1)
      at Object.<anonymous> (src/index.test.tsx:3:1)

PASS src/App.test.tsx
---------------------|---------|----------|---------|---------|-------------------
File                 | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
---------------------|---------|----------|---------|---------|-------------------
All files            |    0.59 |        0 |       2 |    0.61 |                   
 src                 |    0.72 |        0 |     2.5 |    0.74 |                   
  App.tsx            |     100 |      100 |     100 |     100 |                   
  Basket.tsx         |       0 |        0 |       0 |       0 | 12-117            
  Box.tsx            |       0 |        0 |       0 |       0 | 7-45              
  Container.tsx      |       0 |        0 |       0 |       0 | 15-218            
  DraggableLayer.tsx |       0 |      100 |       0 |       0 | 16-32             
  DraggingLayer.tsx  |       0 |        0 |       0 |       0 | 9-25              
  ItemTypes.ts       |       0 |      100 |     100 |       0 | 1                 
  MapBox.ts          |       0 |        0 |       0 |       0 |                   
  NumberBox.ts       |       0 |        0 |       0 |       0 |                   
  ObjectPlaces.tsx   |       0 |        0 |       0 |       0 |                   
  PicSquare.tsx      |       0 |      100 |       0 |       0 | 14-27             
  Place.ts           |       0 |        0 |       0 |       0 |                   
  PlacePic.tsx       |       0 |      100 |       0 |       0 | 17-61             
  constants.ts       |       0 |      100 |     100 |       0 | 1                 
  game.ts            |       0 |        0 |       0 |       0 | 4-35              
  index.tsx          |       0 |      100 |       0 |       0 | 7-59              
  interfaces.ts      |       0 |        0 |       0 |       0 |                   
  reportWebVitals.ts |       0 |        0 |       0 |       0 | 3-11              
 src/InitCommit      |       0 |        0 |       0 |       0 |                   
  Board.tsx          |       0 |        0 |       0 |       0 | 8-38              
  BoardSquare.tsx    |       0 |        0 |       0 |       0 | 13-26             
  Overlay.tsx        |       0 |      100 |       0 |       0 | 7-8               
  Pic.tsx            |       0 |      100 |       0 |       0 | 6-7               
  Square.tsx         |       0 |        0 |       0 |       0 | 7-11              
---------------------|---------|----------|---------|---------|-------------------

Test Suites: 1 failed, 1 passed, 2 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        3.94 s
Ran all test suites.
